modified:   16. Linear Data Structures/Custom Implementations/Dynamic (Linked) Lists.ipynb modified:   16. Linear Data Structures/Custom Implementations/Static (Array-based) Lists.ipynb

--- a/16. Linear Data Structures/Custom Implementations/Dynamic (Linked) Lists.ipynb
+++ b/16. Linear Data Structures/Custom Implementations/Dynamic (Linked) Lists.ipynb
@@ -23,7 +23,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In comparison to other Linear Data Structures, the [Static List (Array-based)](./Static%20Lists%20(Array-based).ipynb) has a *serious disadvantage* – the operations for *inserting* and *removing* items from the inside of the array requires *rearrangement of the elements* (*shift operations*).   \n",
+    "In comparison to other Linear Data Structures, the [Static List (Array-based)](Static%20(Array-based)%20Lists.ipynb) has a *serious disadvantage* – the operations for *inserting* and *removing* items from the inside of the array requires *rearrangement of the elements* (*shift operations*).   \n",
     "   \n",
     "When frequently inserting and removing items (especially a large number of items), this can lead to *low performance*.   "
    ]
