modified:   16. Linear Data Structures/Custom Implementations/Static (Array-based) Lists.ipynb

--- a/16. Linear Data Structures/Custom Implementations/Static (Array-based) Lists.ipynb
+++ b/16. Linear Data Structures/Custom Implementations/Static (Array-based) Lists.ipynb
@@ -31,7 +31,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Somewhat similarly to <a href=\"../07. Arrays/The Anatomy of an Array.ipynb\">Arrays</a>, we could imagine the **list** as an **ordered sequence (line) of elements**."
+    "Somewhat similarly to <a href=\"../../07. Arrays/The Anatomy of an Array.ipynb\">Arrays</a>, we could imagine the **list** as an **ordered sequence (line) of elements**."
    ]
   },
   {
@@ -79,7 +79,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Even so, there exists implementation techniques for an Array what make it possible to **automatically resize it's capacity** (in a similar fashion to the [StringBuilder](../13.%20Strings%20and%20Text%20Processing/Building%20Strings.ipynb) class).   \n",
+    "Even so, there exists implementation techniques for an Array what make it possible to **automatically resize it's capacity** (in a similar fashion to the [StringBuilder](../../13.%20Strings%20and%20Text%20Processing/Building%20Strings.ipynb) class).   \n",
     "\n",
     "Such a list may be reffered to as a **Static List implemented with an extensible Array**."
    ]
@@ -89,7 +89,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using [Generics](../14.%20Defining%20Classes/Generics.ipynb), we may define such an Array-based structure able to hold any type of data, as defined below:"
+    "Using [Generics](../../14.%20Defining%20Classes/Generics.ipynb), we may define such an Array-based structure able to hold any type of data, as defined below:"
    ]
   },
   {
