modified:   16. Linear Data Structures/Custom Implementations/Dynamic (Linked) Lists.ipynb

--- a/16. Linear Data Structures/Custom Implementations/Dynamic (Linked) Lists.ipynb
+++ b/16. Linear Data Structures/Custom Implementations/Dynamic (Linked) Lists.ipynb
@@ -75,7 +75,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using [Generics](../../../Notes%20On%20C-Sharp/14.%20Defining%20Classes/Generics.ipynb), we may define such a Dynamically Linked structure to be able to hold any type of data, as defined below:"
+    "Using [Generics](../../14.%20Defining%20Classes/Generics.ipynb), we may define such a Dynamically Linked structure to be able to hold any type of data, as defined below:"
    ]
   },
   {
