modified:   14. Defining Classes/Generics.ipynb

--- a/14. Defining Classes/Generics.ipynb
+++ b/14. Defining Classes/Generics.ipynb
@@ -66,6 +66,9 @@
     },
     "polyglot_notebook": {
      "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "csharp"
     }
    },
    "outputs": [],
@@ -104,6 +107,9 @@
     },
     "polyglot_notebook": {
      "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "csharp"
     }
    },
    "outputs": [],
@@ -203,6 +209,9 @@
     },
     "polyglot_notebook": {
      "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "csharp"
     }
    },
    "outputs": [],
@@ -235,6 +244,9 @@
     },
     "polyglot_notebook": {
      "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "csharp"
     }
    },
    "outputs": [],
@@ -260,18 +272,18 @@
     },
     "polyglot_notebook": {
      "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "csharp"
     }
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WOOF!\n",
-      "WOOF!\n",
-      "WOOF!\n",
-      "WOOF!\n",
-      "<null>\n"
+     "ename": "Unhandled Exception",
+     "evalue": "(3,25): error CS0173: Type of conditional expression cannot be determined because there is no implicit conversion between 'Dog' and 'string'",
+     "output_type": "error",
+     "traceback": [
+      "(3,25): error CS0173: Type of conditional expression cannot be determined because there is no implicit conversion between 'Dog' and 'string'"
      ]
     }
    ],
@@ -308,13 +320,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
     },
     "polyglot_notebook": {
      "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "csharp"
     }
    },
    "outputs": [],
@@ -356,28 +371,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
     },
     "polyglot_notebook": {
      "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "csharp"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WOOF!\n",
-      "WOOF!\n",
-      "WOOF!\n",
-      "<null>\n",
-      "<null>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "foreach( Dog kennel in dogShelter.kennels )\n",
     "{\n",
@@ -387,57 +393,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
     },
     "polyglot_notebook": {
      "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "csharp"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div class=\"dni-plaintext\"><pre>WOOF!</pre></div><style>\r\n",
-       ".dni-code-hint {\r\n",
-       "    font-style: italic;\r\n",
-       "    overflow: hidden;\r\n",
-       "    white-space: nowrap;\r\n",
-       "}\r\n",
-       ".dni-treeview {\r\n",
-       "    white-space: nowrap;\r\n",
-       "}\r\n",
-       ".dni-treeview td {\r\n",
-       "    vertical-align: top;\r\n",
-       "    text-align: start;\r\n",
-       "}\r\n",
-       "details.dni-treeview {\r\n",
-       "    padding-left: 1em;\r\n",
-       "}\r\n",
-       "table td {\r\n",
-       "    text-align: start;\r\n",
-       "}\r\n",
-       "table tr { \r\n",
-       "    vertical-align: top; \r\n",
-       "    margin: 0em 0px;\r\n",
-       "}\r\n",
-       "table tr td pre \r\n",
-       "{ \r\n",
-       "    vertical-align: top !important; \r\n",
-       "    margin: 0em 0px !important;\r\n",
-       "} \r\n",
-       "table th {\r\n",
-       "    text-align: start;\r\n",
-       "}\r\n",
-       "</style>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "releasedAnimal"
    ]
@@ -460,13 +428,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
     },
     "polyglot_notebook": {
      "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "csharp"
     }
    },
    "outputs": [],
@@ -502,25 +473,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
     },
     "polyglot_notebook": {
      "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "csharp"
     }
    },
-   "outputs": [
-    {
-     "ename": "Error",
-     "evalue": "(3,21): error CS1503: Argument 1: cannot convert from 'Cat' to 'Dog'",
-     "output_type": "error",
-     "traceback": [
-      "(3,21): error CS1503: Argument 1: cannot convert from 'Cat' to 'Dog'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "AnimalShelter catShelter = new AnimalShelter(5);\n",
     "\n",
@@ -823,13 +788,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
     },
     "polyglot_notebook": {
      "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "csharp"
     }
    },
    "outputs": [],
@@ -861,24 +829,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
     },
     "polyglot_notebook": {
      "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "csharp"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "After the Swap, five = 10 and ten = 5\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "public int five = 5,\n",
     "           ten  = 10;\n",
@@ -892,24 +855,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
     },
     "polyglot_notebook": {
      "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "csharp"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "After the Swap, 1st_Word = Second Word and 2nd_Word = First Word\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "public string firstWord  = \"First Word\",\n",
     "              secondWord = \"Second Word\"; \n",
@@ -941,24 +899,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
     },
     "polyglot_notebook": {
      "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "csharp"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "After the Swap, five = 5 and ten = 10\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "Swap( ref five, ref ten );\n",
     "\n",
@@ -967,24 +920,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
     },
     "polyglot_notebook": {
      "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "csharp"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "After the Swap, 1st_Word = First Word and 2nd_Word = Second Word\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "Swap( ref firstWord, ref secondWord );\n",
     "\n",
@@ -1027,13 +975,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
     },
     "polyglot_notebook": {
      "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "csharp"
     }
    },
    "outputs": [],
@@ -1134,13 +1085,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
     },
     "polyglot_notebook": {
      "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "csharp"
     }
    },
    "outputs": [],
@@ -1166,13 +1120,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
     },
     "polyglot_notebook": {
      "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "csharp"
     }
    },
    "outputs": [],
@@ -1183,28 +1140,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
     },
     "polyglot_notebook": {
      "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "csharp"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MEOW!\n",
-      "MEOW!\n",
-      "MEOW!\n",
-      "MEOW!\n",
-      "<null>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "foreach( Cat kennel in catShelter.kennels )\n",
     "{\n",
@@ -1230,13 +1178,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
     },
     "polyglot_notebook": {
      "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "csharp"
     }
    },
    "outputs": [],
@@ -1246,28 +1197,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
     },
     "polyglot_notebook": {
      "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "csharp"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MEOW!\n",
-      "MEOW!\n",
-      "MEOW!\n",
-      "<null>\n",
-      "<null>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "foreach( Cat kennel in catShelter.kennels )\n",
     "{\n",
@@ -1299,7 +1241,11 @@
    "name": ".net-csharp"
   },
   "language_info": {
-   "name": "polyglot-notebook"
+   "file_extension": ".cs",
+   "mimetype": "text/x-csharp",
+   "name": "C#",
+   "pygments_lexer": "csharp",
+   "version": "8.0"
   },
   "polyglot_notebook": {
    "kernelInfo": {
